# CalculatorLibrary

./: README.md  calculator.py  codecov.yml  pyproject.toml  requirements.txt  test_calculator.py
.circleci/: config.yml
