[tool.poetry]
name = "calculatorlibrary"
version = "0.1.0"
description = ""
authors = ["akc <akc.code@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
flake8 = "^3.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
flake8 = "^3.9.0"

[tool.coverage.run]
source = ["."]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
